# hs-wildcard

./: LICENSE  README.md  wildcard.cabal
src/Text/: WildCardMatcher.hs
