name:                wildcard
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              asakamirai
copyright:           asakamirai
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Text.WildCardMatcher
  build-depends:       base >=4.5
                       , bytestring ==0.10.0.2
                       , attoparsec ==0.10.4.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
